--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,16 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
-    ports:
+    ports: 
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     volumes:
-      - db:/var/lib/mysql
+      - ./db:/var/lib/mysql/data
   app:
     depends_on:
       - mysqldb
-    build: ./
+    build:
+      context: .
+    image: node-docker
     restart: unless-stopped
     env_file: ./.env
     ports:
