--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,11 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.2",
-    "sequelize": "^6.25.3"
+    "sequelize": "^6.25.3",
+    "swagger-autogen": "^2.22.0",
+    "swagger-ui-express": "^4.6.0"
+  },
+  "devDependencies": {
+    "pathfinder-ui": "^1.0.3"
   }
 }
